# ToyPlayer

./: .gitignore  README.md  build.gradle.kts  gradle.properties  renovate.json  settings.gradle.kts
RxTest/: build.gradle  local.properties  settings.gradle
RxTest/app/: build.gradle  google-services.json
RxTest/data/: build.gradle
RxTest/domain/: build.gradle
RxTest/presentation/: build.gradle  google-services.json
ToyProject/: build.gradle  build.gradle.kts  gradle.properties  local.properties  settings.gradle.kts
ToyProject/Plugins/: build.gradle.kts  settings.gradle.kts
ToyProject/app/: build.gradle  build.gradle.kts  google-services.json
ToyProject/buildSrc/: build.gradle.kts
ToyProject/data/: build.gradle  build.gradle.kts
ToyProject/domain/: build.gradle  build.gradle.kts
app/: build.gradle.kts
build-logic/: build.gradle.kts  settings.gradle.kts
cast-receiver/: .firebaserc  README.md
core/juce/: CMakeLists.txt  build.gradle.kts
core/juce/src/main/cpp/: native-lib.cpp
core/juce/src/main/cpp/juce_module/juce_core/: juce_core.cpp
core/juce/src/main/cpp/juce_module/juce_core/native/: juce_BasicNativeHeaders.h  juce_SystemStats_android.cpp
core/juce/src/main/cpp/juce_module/juce_dsp/: juce_dsp.cpp
core/juce/src/main/cpp/ndk_compat/: cpu-features.h
core/juce/src/main/java/com/jooheon/toyplayer/core/juce/: JuceInitializer.kt
data/: build.gradle.kts
di_practice/: local.properties  settings.gradle
domain/: build.gradle.kts
gradle/: libs.versions.toml
scripts/: generate_diagrams.py
testing/: build.gradle.kts
(+1846 files in other folders)
